[CYB-231] Fix compile errors and refactor to improve coverage and efficiency